# tondi-seeder

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  kaseeder.conf.optimized  test_config.conf  test_dns_discovery.rs  tondiseeder.conf  tondiseeder.conf.example
proto/: tondi_seeder.proto
scripts/: check_status.sh  dev_run.sh  network_check.sh  performance_test.sh  start_seeder.sh  test_dns_discovery.sh
src/: checkversion.rs  config.rs  constants.rs  crawler.rs  dns.rs  dns_seed_config.rs  dns_seed_discovery.rs  errors.rs  grpc.rs  lib.rs  logging.rs  main.rs  manager.rs  monitor.rs  netadapter.rs  profiling.rs  tondi_protocol.rs  types.rs  version.rs
